--- a/2nd/index.html
+++ b/2nd/index.html
@@ -36,10 +36,16 @@
 
         <hr />
         <hr />
-        <button>가입하기</button>
-        <!-- 기능자체는 input의 타입을 button으로 하면 사용은 가능하지만, 굳이 button 태그를 사용하는 이유는 -->
-        <!-- 커스터마이징이 button 태그가 더 용이하기 때문이다. -->
-        <!-- <input type="button" value="가입하기"> -->
+        <
+        <div id="btnWrap">
+          <button typ="button" id="popupBtn">가입하기</button>
+        </div>
+        <div id="modalWrap">
+          <div id="modalBody">
+            <span id="closeBtn">&times;</span>
+            <p>modal-popup 입니다.</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
